--- a/datastore/package.json
+++ b/datastore/package.json
@@ -1,16 +1,21 @@
 {
   "name": "datastore",
   "version": "1.0.0",
-  "description": "",
+  "description": "Datastore with for the Memori project",
   "main": "start.js",
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/bcaton85/Memori"
+  },
   "scripts": {
-    "start": "node start.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node start.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@google-cloud/datastore": "^4.2.0",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1"
   }
 }
