--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,13 @@
 
 # dependencies
 /frontend/node_modules
+/datastore/node_modules
 /frontend/.pnp
 /frontend/.pnp.js
 
 # testing
 /frontend/coverage
+/datastore/memories-sa.json
 
 # production
 /frontend/build
