--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@
 
 # dependencies
 /frontend/node_modules
-/backend-api/node_modules
+/backend/node_modules
+/backend/dist
 /frontend/.pnp
 /frontend/.pnp.js
 
