--- a/backend/package.json
+++ b/backend/package.json
@@ -27,18 +27,23 @@
     "@nestjs/mongoose": "^6.4.0",
     "@nestjs/passport": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/sequelize": "^0.1.0",
     "@types/mongoose": "^5.7.7",
     "cookie-parser": "^1.4.5",
     "helmet": "^3.22.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "mongoose": "^5.9.6",
+    "mysql2": "^2.1.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "pg": "^8.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4"
+    "rxjs": "^6.5.4",
+    "sequelize": "^5.21.5",
+    "sequelize-typescript": "^1.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
@@ -49,6 +54,7 @@
     "@types/node": "^13.9.1",
     "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
+    "@types/sequelize": "^4.28.8",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
     "@typescript-eslint/parser": "^2.23.0",
