--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,12 +4,11 @@
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve --ssl",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "start": "ionic serve --ssl",
+    "build": "ionic build",
+    "test": "ionic test",
+    "lint": "ionic lint",
+    "e2e": "ionic e2e"
   },
   "private": true,
   "dependencies": {
@@ -18,8 +17,10 @@
     "@angular/forms": "~8.2.14",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
+    "@angular/pwa": "^0.901.0",
     "@angular/router": "~8.2.14",
-    "@capacitor/core": "^1.5.0",
+    "@angular/service-worker": "~8.2.14",
+    "@capacitor/core": "^1.5.2",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
@@ -38,7 +39,7 @@
     "@angular/compiler": "~8.2.14",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
-    "@capacitor/cli": "^1.5.0",
+    "@capacitor/cli": "^1.5.2",
     "@ionic/angular-toolkit": "^2.1.1",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
