--- a/.gitignore
+++ b/.gitignore
@@ -15,10 +15,8 @@
 
 # misc
 /.DS_Store
-/.env.local
-/.env.development.local
-/.env.test.local
-/.env.production.local
+/backend/.env.local
+/backend/.env.production
 /.vscode
 
 /frontend/npm-debug.log*
