--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "serve": "ionic serve --external --ssl",
     "start": "node server.js",
-    "build": "ionic build --prod",
+    "build": "npx ionic build --prod",
     "test": "ionic test",
     "lint": "ionic lint",
     "e2e": "ionic e2e",
